Fixed pokeball alignment

--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,8 @@ body{
 }
 .white-circle{
     background-color:white;
-    width: 100px;
-    height: 95%;
+    width: 95px;
+    height: 95px;
     min-width:fit-content;
     min-height:fit-content;
     border-radius: 5rem;
@@ -52,7 +52,7 @@ body{
     box-sizing: border-box;
 }
 .list-item img{
-    padding: 5px;
+    padding: 2.5px;
     width: 90px;
     height: 90px;
 }
